Closed Bug 560193 Opened 14 years ago Closed 10 years ago

unable to delete newsgroup saved search

Categories

(Thunderbird :: Folder and Message Lists, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 30.0

People

(Reporter: glob, Assigned: aceman)

Details

Attachments

(1 file, 2 obsolete files)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2.2) Gecko/20100316 Firefox/3.6.2 (.NET CLR 3.5.30729)
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.9) Gecko/20100317 Thunderbird/3.0.4

i am unable to delete a newsgroup filtering saved search.

there is no option to delete the saved search in the context menu, and clicking 'unsubscribe' does nothing.

Reproducible: Always

Steps to Reproduce:
1. search a newsgroup
2. create a saved search from the results
3. right-click on the search and look for 'delete'

Actual Results:  
no delete option

Expected Results:  
the ability to delete saved searches
Anything in Tools -> error console ?
nothing in the error console.

should there be a "delete" item in the context menu?
I believe the issue is that we don't allow delete of newsgroups, and because the saved search is under a news server, we mistakenly think it's a newsgroup and don't allow delete of it.
until this bug is resolved, is there a way to manually delete the searches?
You can manually remove it from the file virtualFolders.dat in your TB profile.

If this is just a wrong condition in the context menu as comment 3 suggests, I can try this.
Assignee: nobody → acelists
(In reply to :aceman from comment #5)
> You can manually remove it from the file virtualFolders.dat in your TB
> profile.
> 
> If this is just a wrong condition in the context menu as comment 3 suggests,
> I can try this.

also missing from file menu
Flags: needinfo?(acelists)
This is probably caused by the fact that we apparently allow search folders in a news account by mistake. Some code allows them there, but other parts are not prepared for that and don't offer the related actions.
Attached patch patch (obsolete) — Splinter Review
OK, let's try this. I don't know why the logic for the context menu and the File menu is so different. So I had to change it at several places.

Hopefully it does not open a can of worms. But we need a delete command until we properly prevent creating of Saved search under news or reimplement saved searches to be on a level above the actual accounts (as discussed in other bugs).
Attachment #8362716 - Flags: review?(mkmelin+mozilla)
Attachment #8362716 - Flags: review?(Pidgeot18)
Flags: needinfo?(acelists)
Comment on attachment 8362716 [details] [diff] [review]
patch

Review of attachment 8362716 [details] [diff] [review]:
-----------------------------------------------------------------

The menus still talk about unsubscribe. Could you fix that too?

::: mail/base/content/mail3PaneWindowCommands.js
@@ +286,1 @@
>              return CanDeleteFolder(folder);

drop the else
Attachment #8362716 - Flags: review?(mkmelin+mozilla)
Attachment #8362716 - Flags: review?(Pidgeot18) → review+
It looks like bug 878805 finally prevented creating search folders under news. So this patch just complements it and allows the user to clean up any existing ones.
Attached patch patch v2 (obsolete) — Splinter Review
This removes the Unsubscribe item when over a search folder. Fixes also the "Newsgroup properties" item in Edit menu.
Attachment #8362716 - Attachment is obsolete: true
Attachment #8368202 - Flags: review?(mkmelin+mozilla)
Comment on attachment 8368202 [details] [diff] [review]
patch v2

Review of attachment 8368202 [details] [diff] [review]:
-----------------------------------------------------------------

Looks good. r=mkmelin
I do get an error to console when selecting such a folder, but it doesn't appear to be related to this

::: mail/base/content/mail3PaneWindowCommands.js
@@ +285,2 @@
>              return CanDeleteFolder(folder);
> +          }

no return in else, just fall through an return
Attachment #8368202 - Flags: review?(mkmelin+mozilla) → review+
Attached patch patch finalSplinter Review
Thanks.
Attachment #8368202 - Attachment is obsolete: true
Attachment #8369569 - Flags: review+
Status: NEW → ASSIGNED
Keywords: checkin-needed
https://hg.mozilla.org/comm-central/rev/04b872817043
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 30.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: