Bug 560193 - Allow deleting a saved search under news account. r=jcranmer, r=mkmelin